Bug #5973
kmem: double-calling kmem_depot_ws_update isn't obvious
Start date:
2015-05-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
While the double-call is documented in a comment, it's not obvious what exactly it is trying to accomplish. The easiest way to address this is to introduce a new function that "zeroes-out" the working set statistics to force everything to be eligible for reaping.
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
- % Done changed from 80 to 100
git commit 0c833d6473a8b5e01ef9b7bc9ac547c0a016f932
commit 0c833d6473a8b5e01ef9b7bc9ac547c0a016f932 Author: Josef 'Jeff' Sipek <josef.sipek@nexenta.com> Date: 2015-06-19T07:06:06.000Z 5973 kmem: double-calling kmem_depot_ws_update isn't obvious Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Albert Lee <trisk@omniti.com>