5973 kmem: double-calling kmem_depot_ws_update isn't obvious Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Albert Lee <trisk@omniti.com>